@@ -2,6 +2,7 @@
 * url-handlers: #2485 fixed: do not treat strings beginning with "ftp." as http links (beevvy)
 * gadu: fixed rare problem which have been causing inability to send any messages (beevvy)
 * gadu: fixed possible application hangs, especially when trying to connect on unstable Internet connection (beevvy)
+* chat styles: fixed issues with contact activity icon not being displayed in old message styles (beevvy)
 
 +++ version 0.11.1
 * gui: #2464 fixed: Clear Chat button was not properly activated after reading messages from history (Vogel)
